--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    /* background-color: #f7f1ee; */
 }
 
 html {
@@ -14,6 +15,7 @@ html {
 .red {
     color: #BC1722;
 }
+
 
 
 /* NAVIGARTION  */
@@ -44,6 +46,7 @@ html {
 
 .nav__tab--anchor {
     text-decoration: none;
+    font-weight: 600;
     
 }
 
@@ -55,25 +58,132 @@ html {
     color: black;
 }
 
-.nav__contact {
-    border: 2px #BC1722;
-    border-radius: 20px;
-    background-color: #BC1722;
-    margin-left: 24px;
-    list-style-type: none;
 
+.nav__contact {
+   
+    list-style-type: none;
+    cursor: not-allowed;
 }
 
 .nav__contact--text {
     color: white;
     display: flex;
     align-items: center;
-    margin: 8px 16px;
     text-decoration: none;
     font-size: 14px;
+    cursor: not-allowed;
+    border: 2px #BC1722;
+    border-radius: 20px;
+    background-color: #BC1722;
+    margin: 0 24px;
+    padding: 8px 20px;
+    font-weight: 600;
 }
 
-.nav__contact:hover {
+.nav__contact--text:hover {
     background-color: rgb(200, 77, 77);
+    transform: scale(1.05);
+    box-shadow: 0 12px 30px 0 rgb(0 0 0 / 30%);
     transition: all .35s ease;
+}
+
+/* BODY 
+ */
+
+ .main__title {
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    margin: 0 200px;
+    text-align: center;
+    color: #BC1722;
+    margin-top: 40px;
+}
+
+.main__title--second {
+    justify-content: center;
+    font-size: 26px;
+    text-align: center;
+    margin-top: 16px;
+}
+
+.search {
+    display: flex;
+    justify-content: center;
+    margin: 32px 200px;
+}
+
+
+.search__btn {
+    color: white;
+    font-size: 14px;
+    border: 2px #BC1722;
+    border-radius: 8px;
+    background-color: #BC1722;
+    padding: 8px 40px;
+    cursor: pointer;
+}
+
+.search__btn:hover {
+    background-color: black;
+}
+
+.fa-search {
+    font-size: 30px;
+}
+
+.search__input {
+    max-width: 600px;
+    margin-right: 10px;
+    color: black;
+    display: flex;
+    align-items: center;
+    border: 2px #BC1722;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 12px 30px 0 rgb(0 0 0 / 30%);
+    padding: 16px 15px;
+    font-weight: 600;
+    width: 100%;
+    margin: 0 12px;
+    line-height: normal; 
+}
+
+.main__fig {
+    display: flex;
+    justify-content: center;
+}
+
+.main__img {
+    width: 400px;
+}
+
+.news {
+}
+
+
+
+.news__img { 
+    width: 100%;
+    height: auto;
+    
+}
+
+.news {
+    margin: 20px 20px;
+    width: 26%;
+}
+
+.texts {
+    width: 100%%;
+}
+
+.news__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.title {
+    margin: 12px 0;
 }
