--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ html {
 
 .nav__img {
     width: 160px;
+    cursor: pointer;
 }
 
 .nav__tabs {
@@ -166,7 +167,8 @@ html {
 .news__img { 
     width: 100%;
     height: 250px;
-    
+    border-radius: 12px;
+    cursor: pointer;
 }
 
 .news {
@@ -175,7 +177,8 @@ html {
 }
 
 .texts {
-    width: 100%%;
+    width: 100%;
+    cursor: pointer;
 }
 
 .news__container {
@@ -186,4 +189,46 @@ html {
 
 .title {
     margin: 12px 0;
+}
+
+/* NEWS PAGE STYLES  */
+
+.newspage__fig {
+    display: flex;
+    justify-content: center;
+    height: 500px; 
+}
+
+.newspage__img {
+    width: 100%;
+    max-width: 800px;
+    box-shadow: 0 12px 30px 0 rgb(0 0 0 / 30%);
+    border-radius: 20px;
+}
+
+.newspage__texts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    padding: 0px 200px;
+    width: 100%;
+}
+
+.description {
+    margin-bottom: 20px;
+}
+
+.newspage__button {
+    background-color: #BC1722; 
+    border-radius: 12px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
 }
